# gbpc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yaml  justfile
cmake/: gbpcConfig.cmake.in
demo/: CMakeLists.txt  ManyDifferentWidgets.cpp  demo.cpp  utils.h
include/gbpc/: exceptions.h  factor.h  gaussian.h  gbpc.h  graph.h  robust_kernels.h  types.h  variable.h  variable_node.h  visualization.h
include/gbpc/visualization/: visualization.h
src/: gaussian.cpp  gbpc.cpp  main.cpp
tests/: CMakeLists.txt  communication.h  ellipse.h  graph_widget.cpp  graph_widget.h  playground.h  qt_visualizer.cpp  robot.h  swarm.h  swarm_game.cpp  test_connectivity.cpp  test_gtsam.cpp  test_regression.cpp  tree_widget.h
